refactor(userProfileDetails): updated Authencation flow so that security authentication has User connected instance. Moved logic of Authentication Provider into core AuthenticateUser useCase. Updated logic userDetails useCase matching with User owned by Security Authentication. defined entities default ArrayList for List properties.