@@ -1,11 +1,12 @@
 package dev.arnoldatse.opensource.look4dev.app.security;
 
 import dev.arnoldatse.opensource.look4dev.app.security.mappers.MapperCoreUserProfileToSimpleGrantedAuthority;
+import dev.arnoldatse.opensource.look4dev.core.auth.FailedAuthenticationException;
 import dev.arnoldatse.opensource.look4dev.core.entities.user.User;
-import dev.arnoldatse.opensource.look4dev.core.entities.user.dtos.UserTokenInfosDto;
-import dev.arnoldatse.opensource.look4dev.core.entities.user.mappers.MapperUserToUserTokenInfos;
 import dev.arnoldatse.opensource.look4dev.core.entities.userProfile.UserProfile;
+import dev.arnoldatse.opensource.look4dev.core.users.UserPasswordEncoder;
 import dev.arnoldatse.opensource.look4dev.core.users.UserRepository;
+import dev.arnoldatse.opensource.look4dev.core.users.usecases.auth.AuthenticationUser;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.BadCredentialsException;
@@ -14,12 +15,7 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
-
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class CustomAuthenticationProvider implements AuthenticationProvider {
@@ -30,7 +26,7 @@ public class CustomAuthenticationProvider implements AuthenticationProvider {
     UserRepository userRepository;
 
     @Autowired
-    PasswordEncoder passwordEncoder;
+    UserPasswordEncoder userPasswordEncoder;
 
     private static final String AUTHENTICATION_ERROR_MESSAGE = "Bad credentials";
 
@@ -41,24 +37,16 @@ public class CustomAuthenticationProvider implements AuthenticationProvider {
         String password = authentication.getCredentials().toString();
 
         try {
-            Optional<User> optionalUser = userRepository.findFirstByEmailOrPseudo(username);
-            if (optionalUser.isPresent()) {
-                User coreUser = optionalUser.get();
-                if (passwordEncoder.matches(password, coreUser.getPassword())) {
-                    UserTokenInfosDto userTokenInfos = new MapperUserToUserTokenInfos(coreUser).mapFromUser();
-                    return new UsernamePasswordAuthenticationToken(
-                            userTokenInfos,
-                            password,
-                            coreUser
-                                    .getUserProfiles()
-                                    .stream()
-                                    .map(this::mapCoreUserProfileToSimpleGrantedAuthority)
-                                    .collect(Collectors.toList())
-                    );
-                }
-            }
-            throw new BadCredentialsException(AUTHENTICATION_ERROR_MESSAGE);
-        } catch (UsernameNotFoundException exception) {
+            User user = new AuthenticationUser(userRepository, userPasswordEncoder).authentication(username, password);
+            return new UsernamePasswordAuthenticationToken(
+                    user,
+                    password,
+                    user.getUserProfiles()
+                            .stream()
+                            .map(this::mapCoreUserProfileToSimpleGrantedAuthority)
+                            .toList()
+            );
+        } catch (FailedAuthenticationException exception) {
             throw new BadCredentialsException(AUTHENTICATION_ERROR_MESSAGE);
         }
     }
